--- a/QuizzApp/Views/Shared/_LayoutPage.cshtml
+++ b/QuizzApp/Views/Shared/_LayoutPage.cshtml
@@ -44,7 +44,7 @@
             <!-- Divider -->
             <hr class="sidebar-divider my-0">
             <li class="nav-item active">
-                <a class="nav-link" href="index.html"><span>Dashboard</span></a>
+                <a class="nav-link" href="~/"><span>Dashboard</span></a>
             </li>
             <hr class="sidebar-divider my-0">
             <li class="nav-item active">
