Included edmx model

--- a/QuizzApp/Views/Quiz/ReviewAnswers.cshtml
+++ b/QuizzApp/Views/Quiz/ReviewAnswers.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewBag.Title = "Score Card";
 }
-<h3 style="text-align: center">Thank You for giving exam your score is @ViewBag.Marks /@Model.Count()</h3>
+<h3 style="text-align: center">Thank You for giving exam your score is @ViewBag.Marks/@Model.Count()</h3>
 @{int i = 1; }
 @foreach (var item in Model)
 {
@@ -12,7 +12,7 @@
         <div class="card-body">          
             @foreach(var option in item.Options)
             {                
-                string alertStyle=option.IsAnswer?"alert-success": (item.SelectedAnswerId==option.OptionId && !option.IsAnswer)?"alert-danger":"";             
+                string alertStyle=option.IsAnswer?"alert-success active": (item.SelectedAnswerId==option.OptionId && !option.IsAnswer)?"alert-danger":"";             
                  <div class="alert @alertStyle">
                     <strong>@Convert.ToChar(j): </strong> @option.OptionText 
                 </div>  
