--- a/QuizzApp/Views/Shared/_LayoutPage.cshtml
+++ b/QuizzApp/Views/Shared/_LayoutPage.cshtml
@@ -83,7 +83,7 @@
                     </ul>
                 </nav>
                 <!-- Begin Page Content -->
-                <div style="height: 487px;overflow: auto;" class="container-fluid">
+                <div style="height: 33em;overflow: auto;" class="container-fluid">
                     @RenderBody()
                 </div>
                 <!-- /.container-fluid -->
@@ -93,7 +93,7 @@
             <footer class="sticky-footer bg-white">
                 <div class="container my-auto">
                     <div class="copyright text-center my-auto">
-                        <span>Copyright &copy; Your Website 2019</span>
+                       <span>Copyright &copy; Quiz App 2019</span>
                     </div>
                 </div>
             </footer>
